fix(billing/ON): address comprehensive PR #1967 self-review (Must/Should + 8/14 Could)
Verified each agent finding against the current code before applying. 105 tests
pass; bill form and correction page render cleanly via Playwright.

Must (5/5)
- errorpage.jsp now logs the captured exception. Without this, every JSP-render
  exception forwarded by `<%@ page errorPage="..."%>` produced a generic CARLOS
  Error code with zero stack trace in catalina.out — operations could not
  diagnose anything that lived in JSP-render, including the URLEncoder NPE
  found earlier this session that required manual log instrumentation.
- BillingONReviewDataAssembler: throw IllegalArgumentException (not WARN+drop)
  when addToPatientDx is requested with non-numeric demographic_no. Audit-trail
  integrity: silently swallowing a clinical write would leave the provider
  believing the dx was added when it wasn't.
- BillingONFormDataAssembler billing-history: split too-broad `catch (Exception)`
  into `ClassCastException` (loud at ERROR — data-shape regression in
  JdbcBillingReviewImpl) and `RuntimeException` (WARN — DB outage, render with
  empty history). Clinical: provider may unknowingly duplicate-bill the same
  encounter when the visit-context hint silently disappears.
- ViewBillingONReview2Action 405 response now includes RFC 7231 §6.5.5 Allow
  header. The companion BillingShortcutPg1View2Action got this in d2db61d4;
  this one was missed.
- BillingCorrection2Action: null-LoggedInInfo guard added before hasPrivilege.
  Matches the pattern in the four other 2Actions tightened in 9a0f2bbb.

Should (10/10)
- BillingShortcutPg1DataAssembler history walk: wrap in split-by-type try/catch
  matching BillingONFormDataAssembler — a single malformed history row no
  longer 500's the whole shortcut page; ClassCastException loud at ERROR.
- BillingShortcutPg1.jsp: apply sanitizeIdToken regex to the inline ctlcode
  ingestion (parallel surface to the form assembler's d2db61d4 fix). URL
  comp